Step01 showtime servlet,jsp 필기 Step02 파라미터 2개이상 작성하는 법. login page 만들고 post 방식 파라미터 받기.

--- a/Step01_Servlet/WebContent/index.html
+++ b/Step01_Servlet/WebContent/index.html
@@ -24,5 +24,12 @@
 </body>
 </html>
 
-
+<!-- 
+	주소창에 context path 를 붙이지 않고 만들 수 있다
+	하지만 프로젝트 하나당 work space를 하나씩 만들어야 하는 불편함이 있다.
+	지금은 공부중이니 필요하지 않다.
+	실제 서비스를 할 때는 context 명이 빠진다.
+	
+	context 경로는 나중에 바뀌거나 없어질 예정이므로 경로에 명시하지 않도록 한다.
+ -->
 
